# bindgen

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  empty.rs  release.sh  release_archive.bzl
.github/workflows/: build_release.sh  ci.yml  release.yml
patches/: BUILD.bazel  hermetic-llvm-msvc.patch  rules-rs-fixes.patch  rules-rust-distributed-thin-lto-strip.patch  windows-support-remote-case-aliases.patch
